@@ -1,3 +1,8 @@
+2003-08-27  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/util.test: Added new tests for remaining TclNeedSpace()
+	bugs discussed in [Bug 411825].
+
 2003-08-06  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tclWinInit.c: recognize amd64 and ia32_on_win64 cpus and
